
 606.	[bug]		Compiling with --disable-threads failed due
			to isc_thread_self() being incorrectly defined
			as an integer rather than a function.

 605.	[func]		New function isc_lex_getlasttokentext().

 604.	[bug]		The named.conf parser could print incorrect line
			numbers when long comments were present.

 603.	[bug]		Make dig handle multiple types or classes on the same
			query more correctly.

 602.	[func]		Cope automatically with UnixWare's broken
			IN6_IS_ADDR_* macros. [RT #539]

 601.	[func]		Return a non-zero exit code if an update fails
			in nsupdate.

 600.	[bug]		Reverse lookups sometimes failed in dig, etc...

 599.	[func]		Updated the libisc log API to support i18n message
			arguments to isc_log_{,v}write{,1}.

 598.	[bug]		An update-policy statement would cause the server
			to assert while loading. [RT #536]

 597.	[func]		dnssec-signzone is now multithreaded.

 596.	[bug]		DNS_RDATASLAB_FORCE and DNS_RDATASLAB_EXACT are
			not mutually exclusive.

 595.	[port]		On Linux 2.2, socket() returns EINVAL when it
			should return EAFNOSUPPORT.  Work around this.
			[RT #531]

 594.	[func]		sdb drivers are now assumed to not be thread-safe
			unless the DNS_SDBFLAG_THREADSAFE flag is supplied.

 593.	[bug]		If a secure zone was missing all its NXTs and
			a dynamic update was attempted, the server entered
			an infinite loop.

 592.	[bug]		The sig-validity-interval option now specifies a
			number of days, not seconds.  This matches the
			documentation. [RT #529]

	--- 9.1.0b1 released ---

 591.	[bug]		Work around non-reentrancy in openssl by disabling
			precomputation in keys.

 590.	[doc]		There are now man pages for the lwres library in
			doc/man/lwres.

 589.	[bug]		The server could deadlock if a zone was updated 
			while being transferred out.

 588.	[bug]		ctx->in_use was not being correctly initalised when
			when pushing a file for $INCLUDE. [RT #523]

 587.	[func]		A warning is now printed if the "allow-update"